--- a/Httpserver/public/index.html
+++ b/Httpserver/public/index.html
@@ -10,15 +10,52 @@
         table {
             width: 100%;
             height: 100%;
-            border: 1px dashed black;
+            /* border: 1px solid #333; */
+            margin: 20px auto;
+            font-family: Arial, sans-serif;
             border-collapse: collapse;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
         td,
         th {
-            border: 1px dashed black;
+            /* border: 1px solid #333; */
+            padding: 10px 15px;
             text-align: center;
-            background-color: bisque;
+            /* background-color: #f9f9f9; */
+            color: #333;
+        }
+
+        th {
+            background-color: #ffcc99;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+
+        tr:hover {
+            background-color: #ffffff;
+        }
+
+        tr:nth-child(even) {
+            background-color: #e1e0e0;
+        }
+
+        tr:nth-child(odd) {
+            background-color: #f9f9f9;
+        }
+
+        tr:first-child th:first-child {
+            border-top-left-radius: 15px;
+        }
+
+        tr:first-child th:last-child {
+            border-top-right-radius: 15px;
+        }
+
+        .state{
+            border-radius: 15px;
+            padding:0.2rem 1rem;
+            text-align: center;
         }
 
         #mqttclienthtml {
@@ -140,10 +177,6 @@
             </diV>
 
         </div>
-
-
-
-
     </div>
 </body>
 <script src="../script/mqtt.min.js"></script>
@@ -238,10 +271,22 @@
         const tbody = document.createElement('tbody');
         data.forEach(row => {
             const tr = document.createElement('tr');
-            keys.forEach(key => {
+            keys.forEach((key, index) => {
                 const td = document.createElement('td');
-                td.textContent = row[key];
-                tr.appendChild(td);
+                if (index === 1) {
+                    const p = document.createElement('p');
+                    p.textContent = row[key];
+                    p.className = 'state'; 
+                    if(p.textContent=="False"){
+                        p.style.backgroundColor='rgb(252, 3, 32)';
+                    }else if(p.textContent=="True"){
+                        p.style.backgroundColor='rgb(3, 252, 111)';
+                    }
+                    td.appendChild(p);
+                }else{
+                    td.textContent = row[key];
+                }   
+                tr.appendChild(td);            
             });
             tbody.appendChild(tr);
         });
@@ -350,7 +395,7 @@
         const socket = io('http://localhost:3000');
         // Handle incoming client data updates
         socket.on('updateClientData', (clientData) => {
-            clientdatajson =JSON.parse(clientData);
+            clientdatajson = JSON.parse(clientData);
             clientdatajson.forEach(item => {
                 if (item.state === 'False') {
                     clientjson = clientjson.filter(obj => obj.clientID !== item.id);
@@ -361,7 +406,7 @@
                 document.getElementById('ClientArea').innerHTML = '';
             }
         });
-   
+
         // if (showpin) {
         //     setInterval(async () => {
         //         let urlstate = 'http://localhost:3000/clientdata';
