--- a/Httpserver/public/index.html
+++ b/Httpserver/public/index.html
@@ -52,9 +52,9 @@
             border-top-right-radius: 15px;
         }
 
-        .state{
+        .state {
             border-radius: 15px;
-            padding:0.2rem 1rem;
+            padding: 0.2rem 1rem;
             text-align: center;
         }
 
@@ -80,6 +80,32 @@
             border-radius: 10px;
             background-color: #20adab;
         }
+
+        .custom-list {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            text-align: center;
+        }
+
+        .custom-list li {
+            background-color: #ffffff;
+            border: 1px solid #ddd;
+            border-radius: 3px;
+            height: 50px;
+            width: 280px;
+            transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
+        }
+
+        .custom-list li a {
+            display: block;
+            color: #000;
+            text-decoration: none;
+        }
+
+        .custom-list li:hover {
+            background-color: #e0e0e0;
+        }
     </style>
 </head>
 <!-- <script src="../script/axios.min.js" type="text/javascript"></script> -->
@@ -89,7 +115,7 @@
 
         <div id="sidebar">
             <h2 id="sideMenu">Menu</h2>
-            <ul>
+            <ul class="custom-list">
                 <li><a href="/Devices" onclick="GetDevices()">Devices</a></li>
                 <li><a href="/Topics" onclick="GetTopics()">Topics</a></li>
                 <li><a href="Virtual Device" onclick="MQTTclientOnWeb()">Virtual Device</a></li>
@@ -109,7 +135,7 @@
             <div id="ClientArea"></div>
 
 
-            <diV id="MQTTclient" style="display: none;">
+            <diV id="MQTTclient" style="display: block;">
                 <div id="clientID" style="width: 350px; display: flex; font-size: 12px;"><span
                         style="margin-left: 50px;">Pin Values</span>
                     <span style="display: block; text-align: center; margin-left: 48px; font-size: 10px;"
@@ -276,17 +302,17 @@
                 if (index === 1) {
                     const p = document.createElement('p');
                     p.textContent = row[key];
-                    p.className = 'state'; 
-                    if(p.textContent=="False"){
-                        p.style.backgroundColor='rgb(252, 3, 32)';
-                    }else if(p.textContent=="True"){
-                        p.style.backgroundColor='rgb(3, 252, 111)';
+                    p.className = 'state';
+                    if (p.textContent == "False") {
+                        p.style.backgroundColor = 'rgb(252, 3, 32)';
+                    } else if (p.textContent == "True") {
+                        p.style.backgroundColor = 'rgb(3, 252, 111)';
                     }
                     td.appendChild(p);
-                }else{
+                } else {
                     td.textContent = row[key];
-                }   
-                tr.appendChild(td);            
+                }
+                tr.appendChild(td);
             });
             tbody.appendChild(tr);
         });
@@ -340,7 +366,7 @@
         let url = 'ws://' + 'localhost' + ':' + 8080;
         client = mqtt.connect(url, options);
         client.on('connect', () => {
-            client.subscribe('pins/value');
+            client.subscribe('pins/#');
         });
 
         let clientjson = JSON.parse(clientdata);
@@ -351,30 +377,41 @@
             if (clientjson.length == 0) {
                 clientjson.push(jsondata);
             } else {
-                let newclientsjon;
-                newclientsjon = clientjson.filter((obj) => obj.clientID === jsondata.clientID);
-                if (newclientsjon.length == 0) {
+                let newclientjson;
+                newclientjson = clientjson.filter((obj) => obj.clientID === jsondata.clientID);
+                if (newclientjson.length == 0) {
                     clientjson.push(jsondata);
                 } else {
+
                     let urlstate = 'http://localhost:3000/clientdata';
                     let clientstate = await FetchData(urlstate);
-
                     clientstate.forEach(item => {
                         if (item.state === "False") {
-                            clientjson = clientjson.filter(obj => obj.clientID !== item.id);
+                            clientjson = clientjson.filter(obj => obj.clientID !== item.ID);
                         }
                     });
 
-
-
                     clientjson = clientjson.map((obj) => {
                         if (obj.clientID === jsondata.clientID) {
-                            for (pins in obj.digitalPins) {
-                                obj.digitalPins[pins] = jsondata.digitalPins[pins];
+                            if (jsondata.hasOwnProperty('digitalPins')) {
+                                for (pins in obj.digitalPins) {
+                                    obj.digitalPins[pins] = jsondata.digitalPins[pins];
+                                }
+                            } else if (jsondata.hasOwnProperty('AnalogPins')) {
+                                obj.AnalogPins = jsondata.AnalogPins;
                             }
                         }
                         return obj;
                     });
+
+                    // clientjson = clientjson.map((obj) => {
+                    //     if (obj.clientID === jsondata.clientID) {
+                    //         for (pins in obj.digitalPins) {
+                    //             obj.digitalPins[pins] = jsondata.digitalPins[pins];
+                    //         }
+                    //     }
+                    //     return obj;
+                    // });
 
                 }
             }
@@ -392,20 +429,23 @@
 
         });
 
-        const socket = io('http://localhost:3000');
-        // Handle incoming client data updates
-        socket.on('updateClientData', (clientData) => {
-            clientdatajson = JSON.parse(clientData);
-            clientdatajson.forEach(item => {
-                if (item.state === 'False') {
-                    clientjson = clientjson.filter(obj => obj.clientID !== item.id);
+        if (showpin) {
+            const socket = io('http://localhost:3000');
+            // Handle incoming client data updates
+            socket.on('updateClientData', (clientData) => {
+                clientdatajson = JSON.parse(clientData);
+                clientdatajson.forEach(item => {
+                    if (item.State === 'False') {
+                        clientjson = clientjson.filter(obj => obj.clientID !== item.ID);
+                    }
+                });
+
+
+                if (clientjson.length === 0) {
+                    document.getElementById('ClientArea').innerHTML = '';
                 }
             });
-
-            if (clientjson.length === 0) {
-                document.getElementById('ClientArea').innerHTML = '';
-            }
-        });
+        }
 
         // if (showpin) {
         //     setInterval(async () => {
